plugins {
    id "java-library"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

dependencies {
    api("org.jogamp.jogl:jogl-all:2.5.0")
    api("org.jogamp.gluegen:gluegen-rt:2.5.0")
    runtimeOnly("org.jogamp.jogl:jogl-all-main:2.5.0")
    runtimeOnly("org.jogamp.gluegen:gluegen-rt-main:2.5.0")
}

sourceSets {
    main {
        java {
            srcDirs = ["src/main/java"]
        }
    }
    test {
        java {
            srcDirs = ["src/test"]
        }
    }
    joglDemo {
        java {
            srcDirs = ["src/test"]
        }
    }
}

configurations {
    joglDemoImplementation.extendsFrom implementation
    joglDemoRuntimeOnly.extendsFrom runtimeOnly
}

tasks.register("runHelloWorldJOGL", JavaExec) {
    group = "application"
    description = "Run JOGL demo from CLI"
    mainClass = "jogl.HelloWorldJOGL"
    classpath = sourceSets.joglDemo.runtimeClasspath
}

tasks.named("compileJava", JavaCompile) {
    destinationDirectory = layout.buildDirectory.dir("classes/java/main")
    options.compilerArgs += ["--add-modules", "jdk.incubator.foreign"]
}

tasks.named("compileTestJava", JavaCompile) {
    destinationDirectory = layout.buildDirectory.dir("classes/java/test")
    options.compilerArgs += ["--add-modules", "jdk.incubator.foreign"]
}

tasks.named("compileJoglDemoJava", JavaCompile) {
    destinationDirectory = layout.buildDirectory.dir("classes/java/joglDemo")
}

tasks.named("test", Test) {
    failOnNoDiscoveredTests = false
    dependsOn "buildNativeRandomLibrary"
    jvmArgs "--add-modules", "jdk.incubator.foreign", "--enable-native-access=ALL-UNNAMED"
}

def nativeRandomProjectDir = "${projectDir}/../pkgs/nativeRandomNumberGenerator"
def nativeRandomBuildDir = "${nativeRandomProjectDir}/build"
def nativeLibsDir = layout.buildDirectory.dir("nativeLibs")

tasks.register("configureNativeRandomLibrary", Exec) {
    inputs.file("${nativeRandomProjectDir}/CMakeLists.txt")
    outputs.dir(nativeRandomBuildDir)
    workingDir nativeRandomProjectDir
    commandLine "cmake", "-S", ".", "-B", "build", "-DCMAKE_BUILD_TYPE=Release"
}

tasks.register("compileNativeRandomLibrary", Exec) {
    dependsOn "configureNativeRandomLibrary"
    inputs.dir("${nativeRandomProjectDir}/src")
    outputs.file("${nativeRandomBuildDir}/librpkNativeRandom.so")
    workingDir nativeRandomBuildDir
    commandLine "cmake", "--build", "."
}

tasks.register("buildNativeRandomLibrary", Copy) {
    dependsOn "compileNativeRandomLibrary"
    from("${nativeRandomBuildDir}/librpkNativeRandom.so")
    into nativeLibsDir
}

tasks.named("jar") {
    dependsOn "buildNativeRandomLibrary"
}
